--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -5,7 +5,7 @@ body {
 #root {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 10px;
   grid-row-gap: 10px;
 }
@@ -15,11 +15,27 @@ body {
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
+
+  display: flex;
+  flex-direction: column;
+  text-align: start;
 }
 
-#person > label {
-  margin: 10px;
-  padding: 10px;
+#person > div {
+  display: flex;
+}
+
+#person > div > label {
+  display: flex;
+  align-items: end;
+  justify-content: end;
+  width: 25%;
+  margin-bottom: 10px;
+}
+
+#person > div > input {
+  width: 60%;
+  margin-left: 10px;
 }
 
 #education {
