--- a/src/Styles/Person.css
+++ b/src/Styles/Person.css
@@ -1,12 +1,13 @@
 #person {
   grid-column-start: 1;
-  grid-column-end: 2;
+  grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 3;
 
   display: flex;
   flex-direction: column;
   text-align: start;
+  margin-right: 25%;
 }
 
 #person > div {
@@ -15,10 +16,10 @@
 
 #person > div > label {
   display: flex;
-  align-items: end;
+  flex-direction: row;
+  align-items: center;
   justify-content: end;
-  width: 25%;
-  margin-bottom: 10px;
+  width: 40%;
 }
 
 #person > div > input {
